--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
 </html>
 
 <body>
+  <div class="header">
+    <a href="https://lorenzo-andreaus.github.io">Lorenzo Andreaus</a>
+  </div>
 
+  <div class="body">
+    
+  </div>
+
+  <div class="footer">
+    
+  </div>
+
+  
 </body>
