--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="//use.typekit.net/pqt3nab.js"></script>
-<script>try{Typekit.load();}catch(e){}</script>
-<title>Lamy Homepage</title>
+<title>Lorenzo Andreaus</title>
 </head>
 
 <body class="nosee_link">
@@ -23,32 +21,25 @@
 
     <div id="coordonnees">
 
-        <h1> Stéphane LAMY </h1>
-        <h2> Professeur </h2>
+        <h1> Lorenzo Andreaus </h1>
+        <h2> PhD Student in Mathematics</h2>
 
         <p>
-        <a href="https://www.math.univ-toulouse.fr">Institut de Mathématiques de Toulouse</a><br>
-        <a href="https://www.univ-tlse3.fr">Université de Toulouse</a><br>
-        118 route de Narbonne <br>
-        31062 Toulouse Cedex 9  <br>
+        <a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
+</a><br>
+        <a href="https://u-paris.fr">Université Paris Cité</a><br>
+        Bâtiment Sophie Germain (PRG)<br>
+       8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
         </p>
 
         <table style="padding-left: 15px;">
             <tr>
                 <th>Email :</th>
-                <td>slamy(at)math.univ-toulouse.fr</td>
+                <td>lorenzo(dot)andreaus(at)imj-prg(dot)fr</td>
             </tr>
             <tr>
-                <th>Tel :</th>
-                <td>(+33) (0)5.61.55.73.83</td>
-            </tr>
-        <!--  <tr>
-                <th>Fax :</th>
-                <td>(+33) (0)5.61.55.82.00</td>
-            </tr>-->
-            <tr>
-                <th>Bureau :</th>
-                <td>115 bâtiment 1R2 (<a href="stock/plan_fac.pdf">plan</a>, <a href="https://www.openstreetmap.org/#map=17/43.56134/1.46756">openstreetmap</a>)</td>
+                <th>Office :</th>
+                <td>752</td>
             </tr>
         </table>
 
