--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <div id="coordonnees">
 
         <h1> Lorenzo Andreaus </h1>
-        <h2> PhD Student in Mathematics</h2>
-
+        <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
+            <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
+            <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
+        one can use them to count rational points on projective varieties.</p>
     </div>
 
     <div id="moi">
@@ -63,7 +65,6 @@
         <a href="https://u-paris.fr">Université Paris Cité</a><br>
         Bâtiment Sophie Germain (PRG)<br>
        8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
-        </p>
 
         <table style="padding-left: 15px;">
             <tr>
