--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
     <div id="coordonnees">
 
         <h1> Lorenzo Andreaus </h1>
-        <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
+
+        <div>
+            <li>
+            <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
             <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
             <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
         one can use them to count rational points on projective varieties.</p>
-    </div>
+            </li>
 
-    <div id="moi">
+            <li>
+                <div id="moi">
     <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="pictures/me2025.jpg" id="me"></a>
     </div>
-
-    <div class="picture_blend">
-    <a href="https://images.math.cnrs.fr/permutations-jonglistiques/">
-    <img title ="Permutations jonglistiques" alt="Permutations jonglistiques" src="pictures/juggling_S4.png" id="siteswap"></a>
+            </li>
+        </div>
+        
+        
     </div>
-
 </section>
 
 <section class="cadre">
