--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         <h1> Lorenzo Andreaus </h1>
 
         <div>
-            <li>
+            <<div class="col-*-*">
             <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
             <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
             <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
         one can use them to count rational points on projective varieties.</p>
-            </li>
+            </div>
 
-            <li>
+            <div class="col-*-*">
                 <div id="moi">
     <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="pictures/me2025.jpg" id="me"></a>
     </div>
-            </li>
+            </div>
         </div>
         
         
