--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="col-*-*">
                 <div id="moi">
-    <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="pictures/me2025.jpg" id="me"></a>
+    <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
     </div>
             </div>
         </div>
