--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <section class="cadre">
     <h2> Contact </h2>
     <div id="coordonnees">
-        <a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
+        <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
 </a><br>
         <a href="https://u-paris.fr">Université Paris Cité</a><br>
         Bâtiment Sophie Germain (PRG)<br>
@@ -53,6 +53,7 @@
                 <th>Office :</th>
                 <td>752</td>
             </tr>
+        </p>
         </table>
 
     </div>
