--- a/index.html
+++ b/index.html
@@ -41,17 +41,13 @@
         <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
 </a><br>
         <a href="https://u-paris.fr">Université Paris Cité</a><br>
-        Bâtiment Sophie Germain (PRG)<br>
+        Bâtiment Sophie Germain (PRG), Bureau 752<br>
        8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
 
         <table style="padding-left: 15px;">
             <tr>
                 <th>Email :</th>
                 <td>lorenzo(dot)andreaus(at)imj-prg(dot)fr</td>
-            </tr>
-            <tr>
-                <th>Office :</th>
-                <td>752</td>
             </tr>
         </p>
         </table>
