--- a/index.html
+++ b/index.html
@@ -10,51 +10,41 @@
 
 <div class="main">
 
-<!-- bande menu -->
-
 <script src="menu.js"></script>
 <script>menu(0)</script>
 
 <!-- Coordonnees -->
+<div class="section">
+  <div class="coordonnees-container">
+    <div class="coordonnees-text">
+      <h1>Name</h1>
+      <p>Description</p>
+      <h2>Contact</h2>
+      <p><a href="address">Institute</a><br>
+      <a href="address">University</a><br>
+      Address 1<br>
+      Address 2</p>
 
-<section class="cadre">
-
-    <div id="coordonnees">
-
-        <h1> Lorenzo Andreaus </h1>
-        <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
-        <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
-        <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
-        one can use them to count rational points on projective varieties.</p>
-
-        <div id="moi">
-    <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
-    </div>
-        
-        
-    </div>
-</section>
-
-<section class="cadre">
-    <h2> Contact </h2>
-    <div id="coordonnees">
-        <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
-</a><br>
-        <a href="https://u-paris.fr">Université Paris Cité</a><br>
-        Bâtiment Sophie Germain (PRG), Bureau 752<br>
-       8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
-
-        <table style="padding-left: 15px;">
-            <tr>
-                <th>Email :</th>
-                <td>lorenzo(dot)andreaus(at)imj-prg(dot)fr</td>
-            </tr>
-        </p>
-        </table>
-
+      <table>
+        <tr><th>Email:</th><td>Email</td></tr>
+      </table>
     </div>
 
-</section>
+    <div class="coordonnees-photo">
+      <a href="stock/CV_web.pdf">
+        <img title="CV" alt="me" src="foto-de-perfil.jpg" id="me">
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- another section -->
+<div class="section">
+  <h2>Other Information</h2>
+  <p>...</p>
+</div>
+
 </div>
 </body>
+
 </html>
