--- a/index.html
+++ b/index.html
@@ -10,41 +10,49 @@
 
 <div class="main">
 
+<!-- Bande menu -->
 <script src="menu.js"></script>
 <script>menu(0)</script>
 
-<!-- Coordonnees -->
-<div class="section">
-  <div class="coordonnees-container">
-    <div class="coordonnees-text">
-      <h1>Name</h1>
-      <p>Description</p>
+<!-- Header -->
+<section id="header">
+  <div id="coordonnees">
+    <h1>Name</h1>
+    <p>Description</p>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact">
+  <div class="contact-container">
+    <div class="contact-text">
       <h2>Contact</h2>
-      <p><a href="address">Institute</a><br>
-      <a href="address">University</a><br>
-      Address 1<br>
-      Address 2</p>
+      <p>
+        <a href="address">Institute</a><br>
+        <a href="address">University</a><br>
+        Address 1<br>
+        Address 2
+      </p>
 
       <table>
-        <tr><th>Email:</th><td>Email</td></tr>
+        <tr>
+          <th>Email :</th>
+          <td>Email</td>
+        </tr>
       </table>
     </div>
 
-    <div class="coordonnees-photo">
+    <div class="contact-photo">
       <a href="stock/CV_web.pdf">
         <img title="CV" alt="me" src="foto-de-perfil.jpg" id="me">
       </a>
     </div>
   </div>
-</div>
-
-<!-- another section -->
-<div class="section">
-  <h2>Other Information</h2>
-  <p>...</p>
-</div>
+</section>
 
 </div>
 </body>
+</html>
+
 
 </html>
