--- a/index.html
+++ b/index.html
@@ -10,49 +10,51 @@
 
 <div class="main">
 
-<!-- Bande menu -->
+<!-- bande menu -->
+
 <script src="menu.js"></script>
 <script>menu(0)</script>
 
-<!-- Header -->
-<section id="header">
-  <div id="coordonnees">
-    <h1>Name</h1>
-    <p>Description</p>
-  </div>
+<!-- Coordonnees -->
+
+<section class="cadre">
+
+    <div id="coordonnees">
+
+        <h1> Lorenzo Andreaus </h1>
+        <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
+        <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
+        <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
+        one can use them to count rational points on projective varieties.</p>
+
+        <div id="moi">
+    <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
+    </div>
+        
+        
+    </div>
 </section>
 
-<!-- Contact -->
-<section id="contact">
-  <div class="contact-container">
-    <div class="contact-text">
-      <h2>Contact</h2>
-      <p>
-        <a href="address">Institute</a><br>
-        <a href="address">University</a><br>
-        Address 1<br>
-        Address 2
-      </p>
+<section class="cadre">
+    <h2> Contact </h2>
+    <div id="coordonnees">
+        <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
+</a><br>
+        <a href="https://u-paris.fr">Université Paris Cité</a><br>
+        Bâtiment Sophie Germain (PRG), Bureau 752<br>
+       8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
 
-      <table>
-        <tr>
-          <th>Email :</th>
-          <td>Email</td>
-        </tr>
-      </table>
+        <table style="padding-left: 15px;">
+            <tr>
+                <th>Email :</th>
+                <td>lorenzo(dot)andreaus(at)imj-prg(dot)fr</td>
+            </tr>
+        </p>
+        </table>
+
     </div>
 
-    <div class="contact-photo">
-      <a href="stock/CV_web.pdf">
-        <img title="CV" alt="me" src="foto-de-perfil.jpg" id="me">
-      </a>
-    </div>
-  </div>
 </section>
-
 </div>
 </body>
-</html>
-
-
 </html>
