--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 <section class="cadre">
 
     <div id="coordonnees">
-
+     <div id="coordonnees-texte">
         <h1> Lorenzo Andreaus </h1>
         <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
         <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
         <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
         one can use them to count rational points on projective varieties.</p>
+         </div>
 
         <div id="moi">
     <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
