--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="coordonnees">
      <div id="coordonnees-texte">
         <h1> Lorenzo Andreaus </h1>
-        <p>I am currently a PhD student at Université Paris Cité, under the supervision of 
+        <p>I am currently a PhD student at <a href="https://u-paris.fr">Université Paris Cité</a>, under the supervision of 
         <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
         <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
         one can use them to count rational points on projective varieties.</p>
@@ -33,14 +33,8 @@
         <a href="https://u-paris.fr">Université Paris Cité</a><br>
         Bâtiment Sophie Germain (PRG), Bureau 752<br>
        8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
-
-        <table style="padding-left: 15px;">
-            <tr>
-                <th>Email :</th>
-                <td>lorenzo(dot)andreaus(at)imj-prg(dot)fr</td>
-            </tr>
+        <strong>Email: </strong>lorenzo(dot)andreaus(at)imj-prg(dot)fr
         </p>
-        </table>
     </div>
          </div>
 
