--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </a><br>
         <a href="https://u-paris.fr">Université Paris Cité</a><br>
         Bâtiment Sophie Germain (PRG), Bureau 752<br>
-       8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br>
+       8 Place Aurélie Nemours, 75205 PARIS Cedex 13 <br><br>
         <strong>Email: </strong>lorenzo(dot)andreaus(at)imj-prg(dot)fr
         </p>
     </div>
