--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <h1> Lorenzo Andreaus </h1>
         <p>I am currently a PhD student at <a href="https://u-paris.fr">Université Paris Cité</a>, under the supervision of 
         <a href="https://webusers.imj-prg.fr/~marc.hindry/home_uk.html">Marc Hindry</a> and 
-        <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and how
-        one can use them to count rational points on projective varieties.</p>
+        <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying families of abelian varieties and their
+        applications to counting rational points on projective varieties.</p>
          <h2> Contact </h2>
     <div id="coordonnees">
         <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
