--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          </div>
 
         <div id="moi">
-    <a href="stock/CV_web.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
+    <a href="curriculum-vitae.pdf"><img title="CV" alt="me" src="foto-de-perfil.jpg" id="me"></a>
     </div>
         
         
