--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
 
 <!-- Coordonnees -->
 
+
+<div class="cadre">
+<nav>
+<ul>
+<li>
+<div title="Home" class="here">Home</div>
+</li>
+<li>
+<div title="Research" class="research.html">Research</div>
+</li>
+<li>
+<div title="Beyond Mathematics" class="personal.html">Beyond Mathematics</div>
+</li>
+</ul>
+</nav>
+</div>
+    
 <section class="cadre">
 
     <div id="coordonnees">
