--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <div title="Home" class="here">Home</div>
 </li>
 <li>
-<a title="Research" class="research.html">Research</a>
+<a title="Research" href="research.html">Research</a>
 </li>
 <li>
-<a title="Beyond Mathematics" class="personal.html">Beyond Mathematics</a>
+<a title="Beyond Mathematics" href="personal.html">Beyond Mathematics</a>
 </li>
 </ul>
 </nav>
