--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="main">
 
 <div class="cadre">
-<header>
+<nav class="header">
 <ul>
 <li>
 <div title="Home" class="here">Home</div>
@@ -23,7 +23,7 @@
 <a title="Beyond Mathematics" href="personal.html">Beyond Mathematics</a>
 </li>
 </ul>
-</header>
+</nav>
 </div>
     
 <section class="cadre">
