--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <a href="https://webusers.imj-prg.fr/~cyril.demarche/">Cyril Demarche</a>. I am studying 
             <a href="https://encyclopediaofmath.org/wiki/Abelian_scheme">families of abelian varieties</a> and their
         applications to counting <a href="https://en.wikipedia.org/wiki/Rational_point">rational points</a> on 
-            <a href="https://en.wikipedia.org/wiki/Projective_variety">projective varieties</a>.</p>
+            <a href="https://en.wikipedia.org/wiki/Projective_variety">projective varieties</a>.
+        <br>
+        You can find my CV <a href="curriculum-vitae.pdf">here</a>.</p>
          <h2> Contact </h2>
     <div id="coordonnees">
         <p><a href="https://www.imj-prg.fr">Institut de Mathématiques de Jussieu - Paris Rive Gauche (IMJ-PRG)
