--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <div class="main">
 
-<div class="cadre">
-<nav class="header">
+<div class="cadre header">
+<nav">
 <ul>
 <li>
 <div title="Home" class="here">Home</div>
