--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div title="Home" class="here">Home</div>
 </li>
 <li>
-<a title="Research" href="research.html">Research</a>
+<a title="Research" href="research">Research</a>
 </li>
 <li>
-<a title="Beyond Mathematics" href="personal.html">Beyond Mathematics</a>
+<a title="Beyond Mathematics" href="personal">Beyond Mathematics</a>
 </li>
 </ul>
 </nav>
@@ -60,7 +60,7 @@
     </div>
 </section>
 
-<section class="cadre">
+<section class="cadre" id="research">
 <h2>Publications</h2>
 <ul>
 <li>
