--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div title="Home" class="here">Home</div>
 </li>
 <li>
-<a title="Research" href="research">Research</a>
+<a title="Research" href="#research">Research</a>
 </li>
 <li>
-<a title="Beyond Mathematics" href="personal">Beyond Mathematics</a>
+<a title="Beyond Mathematics" href="#personal">Beyond Mathematics</a>
 </li>
 </ul>
 </nav>
