--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav>
 <ul>
 <li>
-<div title="Home" class="here">Home</div>
+<a title="Home" class="here" href="https://lorenzo-andreaus.github.io">Home</a>
 </li>
 <li>
 <a title="Research" href="#research">Research</a>
