--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 <h2>Talks</h2>
 <ul>
 <li></li>
+</ul>
+
+<h2>Other Writings</h2>
+<ul>
+<li><a href="https://bdta.abcd.usp.br/item/003064080">Bachelor thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
+</li>
 </ul>    
 </section>
 
@@ -78,7 +84,15 @@
 <h2>Beyond Mathematics</h2>
 <ul>
 <li>
-    
+<a href="">Playing the piano</a>
+</li>
+
+<li>
+<a href="partituras.html">Piano compositions</a>
+</li>
+
+<li>
+<a href="poemas.html">Poems I wrote (in Portuguese)</a>
 </li>
 </ul>
 </section>
