--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 
 <h2>Other Writings</h2>
 <ul>
-<li><a href="https://bdta.abcd.usp.br/item/003064080">Bachelor thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
+<li><a href="https://bdta.abcd.usp.br/item/003064080">Bachelor Thesis: “Algebraic Number Theory and Introduction to Class Field Theory” (in Portuguese)</a>
+</li>
+
+<li><a href="master-thesis.pdf">Master Thesis: “Equidistribution in Families of Abelian Varieties and Uniformity"</a>
 </li>
 </ul>    
 </section>
