--- a/poemas.html
+++ b/poemas.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="style.css" rel="stylesheet" />
+</head>
+<body>
 
+</body>
+</html>
