--- a/poemas.html
+++ b/poemas.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
 <html lang="pt">
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <title>Meus Poemas</title>
 </head>
-<body>
 
+<body>
+<div class="main">
+  <h1 id="titulo"></h1>
+  <p id="texto"></p>
+
+  <div class="nav-arrows">
+    <span class="arrow" id="prev">&#8592;</span>
+    <span class="arrow" id="next">&#8594;</span>
+  </div>
+</div>
+
+<script>
+const poemas = [
+  {titulo: "Poema 1", texto: "Aqui vai o texto do poema 1\nSegunda linha..."},
+  {titulo: "Poema 2", texto: "Texto do segundo poema\nCom mais versos..."},
+  {titulo: "Poema 3", texto: "Mais um poema lindo\nÚltima linha..."}
+];
+
+let atual = 0;
+function mostrarPoema(i) {
+  const poema = poemas[i];
+  document.getElementById('titulo').innerText = poema.titulo;
+  document.getElementById('texto').innerText = poema.texto;
+}
+mostrarPoema(atual);
+
+document.getElementById('prev').onclick = () => {
+  atual = (atual - 1 + poemas.length) % poemas.length;
+  mostrarPoema(atual);
+};
+document.getElementById('next').onclick = () => {
+  atual = (atual + 1) % poemas.length;
+  mostrarPoema(atual);
+};
+</script>
 </body>
 </html>
