--- a/poemas.html
+++ b/poemas.html
@@ -1,7 +1,7 @@
 <html lang="pt">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="poemastyle.css">
   <title>Meus Poemas</title>
 </head>
 
