--- a/poemas.html
+++ b/poemas.html
@@ -18,7 +18,24 @@
 
 <script>
 const poemas = [
-  {titulo: "Poema 1", texto: "Aqui vai o texto do poema 1\nSegunda linha..."},
+  {titulo: "", texto: "<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto</p>
+<p>Ao contr&aacute;rio, sou at&eacute; demais contido</p>
+<p>Balbucio mil palavras sem sentido</p>
+<p>Rio de nervoso, me apavoro, me amedronto</p>
+<p>Irracionalmente, agi sem discernimento<span class="Apple-converted-space">&nbsp;</span></p>
+<p>Esperando que talvez fosse melhor assim</p>
+<p>Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim</p>
+<p>Aliada a imensur&aacute;vel arrependimento</p>
+<p>&nbsp;</p>
+<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o<span class="Apple-converted-space">&nbsp;</span></p>
+<p>Limpar o que passou, recome&ccedil;ar do in&iacute;cio</p>
+<p>Imprudente momento que me levou ao precip&iacute;cio!</p>
+<p>V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
+<p>E todos sabem que o passado n&atilde;o se altera</p>
+<p>Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou</p>
+<p>Remoendo cada detalhe de um tempo que j&aacute; passou</p>
+<p>A esperar por ventos melhores na pr&oacute;xima primavera</p>
+"},
   {titulo: "Poema 2", texto: "Texto do segundo poema\nCom mais versos..."},
   {titulo: "Poema 3", texto: "Mais um poema lindo\nÚltima linha..."}
 ];
