--- a/poemas.html
+++ b/poemas.html
@@ -1,14 +1,14 @@
 <html lang="pt">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="poemastyle.css">
+  <link rel="stylesheet" href="style.css">
   <title>Meus Poemas</title>
 </head>
 
 <body>
 <div class="main">
   <h1 id="titulo"></h1>
-  <p id="texto"></p>
+  <div id="texto" class="poema"></div>
 
   <div class="nav-arrows">
     <span class="arrow" id="prev">&#8592;</span>
@@ -18,44 +18,25 @@
 
 <script>
 const poemas = [
-  {titulo: "", texto: "<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto</p>
-<p>Ao contr&aacute;rio, sou at&eacute; demais contido</p>
-<p>Balbucio mil palavras sem sentido</p>
-<p>Rio de nervoso, me apavoro, me amedronto</p>
-<p>Irracionalmente, agi sem discernimento<span class="Apple-converted-space">&nbsp;</span></p>
-<p>Esperando que talvez fosse melhor assim</p>
-<p>Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim</p>
-<p>Aliada a imensur&aacute;vel arrependimento</p>
-<p>&nbsp;</p>
-<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o<span class="Apple-converted-space">&nbsp;</span></p>
-<p>Limpar o que passou, recome&ccedil;ar do in&iacute;cio</p>
-<p>Imprudente momento que me levou ao precip&iacute;cio!</p>
-<p>V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
-<p>E todos sabem que o passado n&atilde;o se altera</p>
-<p>Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou</p>
-<p>Remoendo cada detalhe de um tempo que j&aacute; passou</p>
-<p>A esperar por ventos melhores na pr&oacute;xima primavera</p>
-"},
-  {titulo: "Poema 2", texto: "Texto do segundo poema\nCom mais versos..."},
-  {titulo: "Poema 3", texto: "Mais um poema lindo\nÚltima linha..."}
-];
-
-let atual = 0;
-function mostrarPoema(i) {
-  const poema = poemas[i];
-  document.getElementById('titulo').innerText = poema.titulo;
-  document.getElementById('texto').innerText = poema.texto;
-}
-mostrarPoema(atual);
-
-document.getElementById('prev').onclick = () => {
-  atual = (atual - 1 + poemas.length) % poemas.length;
-  mostrarPoema(atual);
-};
-document.getElementById('next').onclick = () => {
-  atual = (atual + 1) % poemas.length;
-  mostrarPoema(atual);
-};
-</script>
-</body>
-</html>
+  {
+    titulo: "Poema 1 — Aurora",
+    texto: `
+      <p>
+      A manhã desperta lenta,<br>
+      Com os olhos cheios de sol.<br>
+      <em>Meu corpo ainda é sombra</em><br>
+      Mas o dia já me chama.
+      </p>
+    `
+  },
+  {
+    titulo: "Poema 2 — Marés",
+    texto: `
+      <p>
+      O mar respira em ondas,<br>
+      <strong>Como quem reza sem voz.</strong><br>
+      Eu sigo o ritmo antigo<br>
+      De quem busca e nunca acha.
+      </p>
+    `
+  }
