--- a/poemas.html
+++ b/poemas.html
@@ -20,30 +20,75 @@
 <script>
 const poemas = [
   {
-    titulo: "Poema 1 — Aurora",
+    titulo: "",
     texto: `
-A manhã desperta lenta,<br>
-Com os olhos cheios de sol.<br>
-<em>Meu corpo ainda é sombra</em><br>
-Mas o dia já me chama.
+<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto</p>
+<p>Ao contr&aacute;rio, sou at&eacute; demais contido</p>
+<p>Balbucio mil palavras sem sentido</p>
+<p>Rio de nervoso, me apavoro, me amedronto</p>
+<p>Irracionalmente, agi sem discernimento</p>
+<p>Esperando que talvez fosse melhor assim</p>
+<p>Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim</p>
+<p>Aliada a imensur&aacute;vel arrependimento</p>
+<p>&nbsp;</p>
+<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o</p>
+<p>Limpar o que passou, recome&ccedil;ar do in&iacute;cio</p>
+<p>Imprudente momento que me levou ao precip&iacute;cio!</p>
+<p>V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
+<p>E todos sabem que o passado n&atilde;o se altera</p>
+<p>Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou</p>
+<p>Remoendo cada detalhe de um tempo que j&aacute; passou</p>
+<p>A esperar por ventos melhores na pr&oacute;xima primavera</p>
     `
   },
   {
-    titulo: "Poema 2 — Marés",
+    titulo: "",
     texto: `
-O mar respira em ondas,<br>
-<strong>Como quem reza sem voz.</strong><br>
-Eu sigo o ritmo antigo<br>
-De quem busca e nunca acha.
+<p>Ilus&atilde;o primaveril essa de que</p>
+<p>Tudo fluiria de uma vez</p>
+<p>De que seria f&aacute;cil como andar</p>
+<p>De que dependeria s&oacute; de mim</p>
+<p>&nbsp;</p>
+<p>Que a vida prega pe&ccedil;as, bem j&aacute; sei</p>
+<p>S&oacute; parece que essa espera n&atilde;o tem fim</p>
+<p>Agonizo n&atilde;o de s&uacute;bita mol&eacute;stia</p>
+<p>Mas de uma ang&uacute;stia lenta e pesarosa</p>
+<p>Que tira de meu rosto pouco a pouco todo o rosa</p>
+<p>Que me empalidece tal qual uma anemia</p>
+<p>&nbsp;</p>
+<p>Verdade seja dita, n&atilde;o h&aacute; melhor analogia</p>
+<p>O que &eacute; a car&ecirc;ncia, se n&atilde;o uma anemia?</p>
+<p>Doen&ccedil;a sorrateira, que aos poucos se apossa</p>
+<p>Quando menos se espera, a fadiga toma conta</p>
+<p>O an&ecirc;mico, abatido, j&aacute; nem se desaponta</p>
+<p>E convive naturalmente com aquilo que o destro&ccedil;a</p>
+<p>&nbsp;</p>
+<p>E o que seria a paix&atilde;o, se n&atilde;o mais outro sintoma, outra dor?</p>
+<p>Falta de ar, tontura, cora&ccedil;&atilde;o acelerado</p>
+<p>Triste &eacute; o pesar de um apaixonado</p>
+<p>De um an&ecirc;mico de amor</p>
     `
   },
   {
-    titulo: "Poema 3 — Noite",
+    titulo: "",
     texto: `
-Há um silêncio na noite<br>
-Que nem o vento desmancha.<br>
-E eu me sento à beira do escuro,<br>
-Esperando a lua chegar.
+<p>N&atilde;o &eacute; na presen&ccedil;a da fulgurosa chama</p>
+<p>Que melhor se sente seu profundo ardor</p>
+<p>E sim quando se esvai todo seu calor</p>
+<p>Quando a saudade bate forte e o peito, g&eacute;lido, inflama</p>
+<p>&nbsp;</p>
+<p>O Sol j&aacute; n&atilde;o brilha forte como outrora</p>
+<p>E a temperatura ambiente j&aacute; parece congelante</p>
+<p>Na aus&ecirc;ncia da tal chama flamejante<span class="Apple-converted-space">&nbsp;</span></p>
+<p>Que para retornar j&aacute; se demora</p>
+<p>&nbsp;</p>
+<p>Mas eis que chega o t&atilde;o sonhado dia</p>
+<p>Em que a chama reaparece, imponente</p>
+<p>Ofuscando tudo que h&aacute; no lugar</p>
+<p>&nbsp;</p>
+<p>E ao tentar me aproximar da chama, paraliso, impotente</p>
+<p>T&atilde;o perto de alcan&ccedil;ar a alegria</p>
+<p>Mas com receio demais de me queimar</p>
     `
   }
 ];
