--- a/poemas.html
+++ b/poemas.html
@@ -22,23 +22,25 @@ const poemas = [
   {
     titulo: "",
     texto: `
-<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto</p>
-<p>Ao contr&aacute;rio, sou at&eacute; demais contido</p>
-<p>Balbucio mil palavras sem sentido</p>
-<p>Rio de nervoso, me apavoro, me amedronto</p>
-<p>Irracionalmente, agi sem discernimento</p>
-<p>Esperando que talvez fosse melhor assim</p>
-<p>Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim</p>
-<p>Aliada a imensur&aacute;vel arrependimento</p>
-<p>&nbsp;</p>
-<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o</p>
-<p>Limpar o que passou, recome&ccedil;ar do in&iacute;cio</p>
-<p>Imprudente momento que me levou ao precip&iacute;cio!</p>
-<p>V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
-<p>E todos sabem que o passado n&atilde;o se altera</p>
-<p>Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou</p>
-<p>Remoendo cada detalhe de um tempo que j&aacute; passou</p>
-<p>A esperar por ventos melhores na pr&oacute;xima primavera</p>
+<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto <br>
+Ao contr&aacute;rio, sou at&eacute; demais contido <br>
+Balbucio mil palavras sem sentido <br>
+Rio de nervoso, me apavoro, me amedronto</p>
+
+<p>Irracionalmente, agi sem discernimento<br>
+Esperando que talvez fosse melhor assim<br>
+Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim<br>
+Aliada a imensur&aacute;vel arrependimento</p>
+
+<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o<br>
+Limpar o que passou, recome&ccedil;ar do in&iacute;cio<br>
+Imprudente momento que me levou ao precip&iacute;cio!<br>
+V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
+
+<p>E todos sabem que o passado n&atilde;o se altera<br>
+Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou<br>
+Remoendo cada detalhe de um tempo que j&aacute; passou<br>
+A esperar por ventos melhores na pr&oacute;xima primavera</p>
     `
   },
   {
