--- a/poemas.html
+++ b/poemas.html
@@ -11,16 +11,16 @@
   <div class="toppane"><h1>Poemas - Lorenzo Andreaus</h1></div>
   <div class="d-flex">
     <div class="leftpane">
-      <span class="arrow" id="prev">&#8592;</span>
+      <div class="arrow-div"><span class="arrow" id="prev">&#8592;</span></div>
     </div>
     
     <div class="middlepane">
-      <h1 id="titulo"></h1>
+      <h2 id="titulo"></h2>
       <div id="texto" class="poema"></div>
     </div>
     
     <div class="rightpane">
-      <span class="arrow" id="next">&#8594;</span>
+      <div class="arrow-div"><span class="arrow" id="next">&#8594;</span></div>
     </div>
   </div>
 </div>
