--- a/poemas.html
+++ b/poemas.html
@@ -30,12 +30,27 @@
   <script>
   const poemas = [
     {
-      titulo: "Poema 1 — Aurora",
+      titulo: "",
       texto: `
-A manhã desperta lenta,<br>
-Com os olhos cheios de sol.<br>
-<em>Meu corpo ainda é sombra</em><br>
-Mas o dia já me chama.
+<p>Geralmente n&atilde;o vou t&atilde;o direto ao ponto <br>
+Ao contr&aacute;rio, sou at&eacute; demais contido <br>
+Balbucio mil palavras sem sentido <br>
+Rio de nervoso, me apavoro, me amedronto</p>
+
+<p>Irracionalmente, agi sem discernimento<br>
+Esperando que talvez fosse melhor assim<br>
+Lam&uacute;ria, entretanto, &eacute; tudo que restou pra mim<br>
+Aliada a imensur&aacute;vel arrependimento</p>
+
+<p>O que eu n&atilde;o daria pra voltar &agrave;quela ocasi&atilde;o<br>
+Limpar o que passou, recome&ccedil;ar do in&iacute;cio<br>
+Imprudente momento que me levou ao precip&iacute;cio!<br>
+V&atilde;, por&eacute;m, &eacute; toda a minha divaga&ccedil;&atilde;o</p>
+
+<p>E todos sabem que o passado n&atilde;o se altera<br>
+Inspira&ccedil;&atilde;o &eacute; o que sobra, e c&aacute; estou<br>
+Remoendo cada detalhe de um tempo que j&aacute; passou<br>
+A esperar por ventos melhores na pr&oacute;xima primavera</p>
       `
     },
     {
