--- a/poemas.html
+++ b/poemas.html
@@ -54,21 +54,55 @@ A esperar por ventos melhores na pr&oacute;xima primavera
       `
     },
     {
-      titulo: "Poema 2 — Marés",
+      titulo: "",
       texto: `
-O mar respira em ondas,<br>
-<strong>Como quem reza sem voz.</strong><br>
-Eu sigo o ritmo antigo<br>
-De quem busca e nunca acha.
+Ilus&atilde;o primaveril essa de que<br>
+Tudo fluiria de uma vez<br>
+De que seria f&aacute;cil como andar<br>
+De que dependeria s&oacute; de mim<br>
+<br>
+Que a vida prega pe&ccedil;as, bem j&aacute; sei<br>
+S&oacute; parece que essa espera n&atilde;o tem fim<br>
+Agonizo n&atilde;o de s&uacute;bita mol&eacute;stia<br>
+Mas de uma ang&uacute;stia lenta e pesarosa<br>
+Que tira de meu rosto pouco a pouco todo o rosa<br>
+Que me empalidece tal qual uma anemia<br>
+<br>
+Verdade seja dita, n&atilde;o h&aacute; melhor analogia<br>
+O que &eacute; a car&ecirc;ncia, se n&atilde;o uma anemia?<br>
+Doen&ccedil;a sorrateira, que aos poucos se apossa<br>
+Quando menos se espera, a fadiga toma conta<br>
+O an&ecirc;mico, abatido, j&aacute; nem se desaponta<br>
+E convive naturalmente com aquilo que o destro&ccedil;a<br>
+<br>
+E o que seria a paix&atilde;o, se n&atilde;o mais outro sintoma, outra dor?<br>
+Falta de ar, tontura, cora&ccedil;&atilde;o acelerado<br>
+Triste &eacute; o pesar de um apaixonado<br>
+De um an&ecirc;mico de amor
+
       `
     },
     {
-      titulo: "Poema 3 — Noite",
+      titulo: "",
       texto: `
-Há um silêncio na noite<br>
-Que nem o vento desmancha.<br>
-E eu me sento à beira do escuro,<br>
-Esperando a lua chegar.
+Não é na presença da fulgurosa chama<br>
+Que melhor se sente seu profundo ardor<br>
+E sim quando se esvai todo seu calor<br>
+Quando a saudade bate forte e o peito, gélido, inflama<br>
+<br>
+O Sol já não brilha forte como outrora<br>
+E a temperatura ambiente já parece congelante<br>
+Na ausência da tal chama flamejante <br>
+Que para retornar já se demora<br>
+<br>
+Mas eis que chega o tão sonhado dia<br>
+Em que a chama reaparece, imponente<br>
+Ofuscando tudo que há no lugar<br>
+<br>
+E ao tentar me aproximar da chama, paraliso, impotente<br>
+Tão perto de alcançar a alegria<br>
+Mas com receio demais de me queimar
+
       `
     }
   ];
