--- a/poemas.html
+++ b/poemas.html
@@ -104,6 +104,154 @@ Tão perto de alcançar a alegria<br>
 Mas com receio demais de me queimar
 
       `
+    },
+    {
+titulo: "",
+texto: `
+Nada no mundo mais me fascina
+Que o esplendor de uma noite estrelada
+Que a paz de chuvosa matina 
+
+Nada no mundo me desatina
+Mais que a presença da pessoa amada
+Mais que o sorriso de certa menina
+
+`
+    },
+    {
+titulo: "",
+texto: `
+Abro a janela e miro o céu
+Uma noite cheia de estrelas
+A Lua brilha alta, imponente para todos 
+Mas insegura de si
+
+Sol já posto, a Lua reflete o seu brilho 
+Um sinal de que o Sol não se foi, esperança de nova manhã
+Mas e se ele não raiar novamente?
+O que é Lua sem Sol? O que é Lua sem luar?
+
+Assim passam-se as noites, lindas mas melancólicas 
+Esperando por um novo dia, que pode nunca chegar
+Repletas de estrelas, radiantes mas longínquas
+Que refletem as histórias de milhões de anos atrás
+`
+    },
+
+    {
+titulo: "",
+texto: `
+Sempre é difícil esse primeiro verso
+Depois o segundo, chegando furtivo
+Para quebrar o bloqueio criativo
+No qual eu estou assim tão submerso
+
+Uma estrofe passou: já foi um avanço
+E a segunda ainda está em processo
+Não é nada fácil, sincero confesso
+Vamos ver ainda se o final alcanço
+
+Assim, de uma estrofe se faz um poema
+E a estrofe, ela mesma, se faz de uma ideia
+Tal como de um lobo se faz alcateia
+E de um animal se faz ecossistema
+
+Agora, essa ideia, tão pobre que seja
+Com métrica e rima dá pra disfarçar
+Falando do Sol, da Lua e do mar,
+Chegando ao efeito que o poeta almeja
+
+Após quatro estrofes de enrolação
+Enfim vem a quinta estrofe derradeira
+Espero que gostem, penei noite inteira
+Pra doar um pouco da minha emoção
+
+Espere um pouquinho, não saia ainda
+Tem mais uns três versos querendo passar
+Pois bem, quem diria, antes do Sol raiar
+Descobri enfim como o poema finda
+`
+    },
+    {
+titulo: "Aguardo",
+texto: `
+Cada minuto que passa
+Parece dois, até três
+E não importa o que eu faça
+Esvai-se minha lucidez
+
+Ando incerto do destino
+Com olhar vago e distante
+Um mal-estar clandestino
+Se apossa de mim num instante
+
+Meu corpo todo se gela
+Enquanto espero a resposta
+Que pode nunca chegar 
+
+E nesse aguardo infinito
+Sou como barco a vela
+Naufragando em alto-mar
+`
+    },
+    {
+titulo: "",
+texto: `
+Vou varando a madrugada
+Vendo a estrela que cintila
+Vendo a vida que cochila
+Vastidão exagerada
+
+Vacilando pela estrada Vendo o vento que sibila
+Vendo a lua que rutila
+Solidão exacerbada
+
+Agravada pela noite
+Que tal qual severo açoite
+Faz o corpo estremecer
+
+Com saudades do futuro
+Vou vagando pelo escuro
+Até o alvorecer
+`
+    },
+    {
+titulo: "",
+texto: `
+Em questão de um momento
+Apossou-se um sentimento
+Que eu não queria ter
+Sentimento insistente
+Que aparece de repente
+E não quer deixar de ser
+
+Em questão de um instante
+Imagino-me um amante
+De um singelo e puro amor
+Um amor de tal requinte
+Que no segundo seguinte
+Faz-me entrar em estupor
+
+Em questão de um segundo
+Sinto a paz reinar no mundo
+E a paixão a se expandir
+Sinto o coração batendo
+E o sentimento crescendo
+Sem que eu o possa reprimir
+
+Em questão de um minuto
+O amor, outrora bruto
+Permitiu-se lapidar
+E o que antes era incerto
+Revelou de peito aberto
+Como é bom poder amar!
+`
+    },
+    {
+titulo: "",
+texto: `
+
+`
     }
   ];
 
